--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="National Aeronautics and Space Administration">
+	<meta name="description" content="Main page of National Aeronautics and Space Administration">
 	<meta name="keywords" content="space, Science, astronomy, cosmology, technology, innovation, international, space, station">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Eswaran Arulkumar">
@@ -31,14 +31,14 @@
 				</label>
 			</div>
 			<input type="checkbox" id="nav-check">
-			<nav class="nav-links"> <a href="index.html" title="Home">HOME</a>  <a href="about.html" title="About">ABOUT</a>  <a href="asteroids.html" title="asteroids">ASTEROIDS</a>  <a href="our_planets.html" title="Our planets">OUR PLANETS</a>  <a href="contact.html" title="Contact">CONTACT</a>
+			<nav class="nav-links"> <a href="index.html" title="Home">HOME</a>  <a href="about.html" title="About">ABOUT</a>  <a href="asteroids.html" title="Asteroids">ASTEROIDS</a>  <a href="our_planets.html" title="Our planets">OUR PLANETS</a>  <a href="contact.html" title="Contact">CONTACT</a>
 			</nav>
 		</div>
 	</div>
 	<!-- ISS Current Location -->
 	<div class="frontheader">
 		<div class="contenthead">
-			<h1 class="frontheadertitle" title="ISS Current Location">Current Location of the International Space Station:</h1><span id="isslocation" class="isslocation"></span>
+			<h1 class="frontheadertitle" title="ISS Current Location">Current Location of the International Space Station:</h1><span id="isslocation" title="ISS Current Location" class="isslocation"></span>
 		</div>
 	</div>
 	<!-- Starting of main articles -->
