--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="National Aeronautics and Space Administration">
+    <meta name="description" content="Read more about National Aeronautics and Space Administration">
     <meta name="keywords" content="Contact, nasa, form, phone, number, space, iss, station, solar, system ">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Eswaran Arulkumar">
-    <title>National Aeronautics and Space Administration - About</title>
+    <title>About National Aeronautics and Space Administration</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
     <!-- This script load script for contact -->
@@ -28,11 +28,11 @@
                 <label for="nav-check"> <span></span> <span></span> <span></span> </label>
             </div>
             <input type="checkbox" id="nav-check">
-            <nav class="nav-links"> <a href="index.html" title="Home">HOME</a> <a href="about.html" title="About">ABOUT</a> <a href="asteroids.html" title="asteroids">ASTEROIDS</a> <a href="our_planets.html" title="Our planets">OUR PLANETS</a> <a href="contact.html" title="Contact">CONTACT</a> </nav>
+            <nav class="nav-links"> <a href="index.html" title="Home">HOME</a> <a href="about.html" title="About" class="activenavbtn">ABOUT</a> <a href="asteroids.html" title="Asteroids">ASTEROIDS</a> <a href="our_planets.html" title="Our planets">OUR PLANETS</a> <a href="contact.html" title="Contact">CONTACT</a> </nav>
         </div>
     </div>
     <!-- Header -->
-    <div class="contact_header">
+    <div class="about_header">
         <div class="contenthead">
             <h1 class="frontheadertitle" title="About">About</h1>
         </div>
@@ -45,7 +45,7 @@
 
             <div class="column">
               <img src="images/about_us.jpg" class="responsiveimage" alt="About Nasa" title="About Nasa">
-              <h2 title="Get in touch with us">About NASA</h2>
+              <h2 title="About NASA">About NASA</h2>
               <p>The National Aeronautics and Space Administration is an independent agency of the United States Federal Government responsible for the civilian space program, as well as aeronautics and space research.</p>
               <p>NASA was established in 1958, succeeding the National Advisory Committee for Aeronautics. The new agency was to have a distinctly civilian orientation, encouraging peaceful applications in space science. Since its establishment, most US space exploration efforts have been led by NASA, including the Apollo Moon landing missions, the Skylab space station, and later the Space Shuttle. NASA is supporting the International Space Station and is overseeing the development of the Orion Multi-Purpose Crew Vehicle, the Space Launch System and Commercial Crew vehicles. The agency is also responsible for the Launch Services Program which provides oversight of launch operations and countdown management for uncrewed NASA launches.</p>
                                         </div>
