--- a/black_hole.html
+++ b/black_hole.html
@@ -26,11 +26,11 @@
                 <label for="nav-check"> <span></span> <span></span> <span></span> </label>
             </div>
             <input type="checkbox" id="nav-check">
-            <nav class="nav-links"> <a href="index.html" title="Home">HOME</a> <a href="about.html" title="About">ABOUT</a> <a href="asteroids.html" title="asteroids">ASTEROIDS</a> <a href="our_planets.html" title="Our planets">OUR PLANETS</a> <a href="contact.html" title="Contact">CONTACT</a> </nav>
+            <nav class="nav-links"> <a href="index.html" title="Home">HOME</a> <a href="about.html" title="About">ABOUT</a> <a href="asteroids.html" title="Asteroids">ASTEROIDS</a> <a href="our_planets.html" title="Our planets">OUR PLANETS</a> <a href="contact.html" title="Contact">CONTACT</a> </nav>
         </div>
     </div>
     <!-- Header -->
-    <div class="contact_header">
+    <div class="blackhole_header">
         <div class="contenthead">
             <h1 class="frontheadertitle" title="What is black hole?">What is black hole?</h1>
         </div>
