--- a/moon.html
+++ b/moon.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="moon, facts, 10, mysterious, satellite, planet, orbits, strange, gravity, universe, space, lunar">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Eswaran Arulkumar">
-    <title>What is black hole?</title>
+    <title>Top 10 facts about moon</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
 </head>
@@ -26,7 +26,7 @@
                 <label for="nav-check"> <span></span> <span></span> <span></span> </label>
             </div>
             <input type="checkbox" id="nav-check">
-            <nav class="nav-links"> <a href="index.html" title="Home">HOME</a> <a href="about.html" title="About">ABOUT</a> <a href="asteroids.html" title="asteroids">ASTEROIDS</a> <a href="our_planets.html" title="Our planets">OUR PLANETS</a> <a href="contact.html" title="Contact">CONTACT</a> </nav>
+            <nav class="nav-links"> <a href="index.html" title="Home">HOME</a> <a href="about.html" title="About">ABOUT</a> <a href="asteroids.html" title="Asteroids">ASTEROIDS</a> <a href="our_planets.html" title="Our planets">OUR PLANETS</a> <a href="contact.html" title="Contact">CONTACT</a> </nav>
         </div>
     </div>
     <!-- Header -->
