--- a/our_planets.html
+++ b/our_planets.html
@@ -4,11 +4,11 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="National Aeronautics and Space Administration - Our planets">
+	<meta name="description" content="Facts about planets in our solar system">
 	<meta name="keywords" content="planets, solar, system, mercury, venus, earth, mars, jupiter, saturn, uranus, neptun ">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Eswaran Arulkumar">
-	<title>National Aeronautics and Space Administration - Contact</title>
+	<title>Planets in our solar system</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
 </head>
@@ -29,7 +29,7 @@
 				</label>
 			</div>
 			<input type="checkbox" id="nav-check">
-			<nav class="nav-links"> <a href="index.html" title="Home">HOME</a>  <a href="about.html" title="About">ABOUT</a>  <a href="asteroids.html" title="asteroids">ASTEROIDS</a>  <a href="our_planets.html" title="Our planets">OUR PLANETS</a>  <a href="contact.html" title="Contact">CONTACT</a>
+			<nav class="nav-links"> <a href="index.html" title="Home">HOME</a>  <a href="about.html" title="About">ABOUT</a>  <a href="asteroids.html" title="Asteroids">ASTEROIDS</a>  <a href="our_planets.html" title="Our planets" class="activenavbtn">OUR PLANETS</a>  <a href="contact.html" title="Contact">CONTACT</a>
 			</nav>
 		</div>
 	</div>
