Update for last time

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </nav>
          </div>
       </div>
-      <!-- ISS Current Location from api-->
+      <!-- ISS Current Location -->
       <div class="frontheader">
          <div class="contenthead">
             <h1 class="frontheadertitle" title="ISS Current Location">Current Location of the International Space Station:</h1>
